[package]
name = "jwks-server-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
chrono = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
rsa = { version = "0.9", features = ["pem"] }
rand = { version = "0.9.2", features = ["std"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8"


[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
tower = "0.5"
http-body-util = "0.1"
